Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-	<h1>Hello coursera</h1>
+	<h1>Hello coursera! Its great course</h1>
 </body>
 </html>
