--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Assignment Solution for Module 2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/css_food.css" rel="stylesheet">
-        <style>
-            
-        </style>
     </head>
     <body>
-        <header>
-            <h1>Our Menu</h1>
-        </header>
-        <section>
-            <div class="col-lg-3 col-md-2 menu">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ea? Pariatur saepe odit enim consequatur. At quasi debitis cupiditate, eum vitae tempore, sed distinctio ratione veniam deleniti 
-                incidunt, impedit earum!
+        <h1>Our Menu</h1>
+        <div class="row">
+            <div class="col-dtp-4 col-tbl-6 col-mob-12">
+                <section>
+                    <p class="title" id="s1">Momos</p>
+                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta id nostrum laudantium expedita. Voluptas minus possimus perferendis illo culpa quisquam, sit necessitatibus similique delectus eius corrupti harum excepturi libero nihil.</p>
+                </section>
             </div>
-            <div class="col-lg-3 col-md-2 menu">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ea? Pariatur saepe odit enim consequatur. At quasi debitis cupiditate, eum vitae tempore, sed distinctio ratione veniam deleniti 
-                incidunt, impedit earum!
+            <div class="col-dtp-4 col-tbl-6 col-mob-12">
+                <section>
+                    <p class="title" id="s2">Paneer Tikka</p>
+                    <p class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias labore fugit aliquid id nesciunt qui animi laboriosam possimus voluptate! Rerum eligendi ipsa unde placeat corrupti fugiat error laudantium cumque earum.</p>
+                </section>
             </div>
-            <div class="col-lg-3 col-md-3 menu">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ea? Pariatur saepe odit enim consequatur. At quasi debitis cupiditate, eum vitae tempore, sed distinctio ratione veniam deleniti 
-                incidunt, impedit earum!
+            <div class="col-dtp-4 col-tbl-12 col-mob-12">
+                <section>
+                    <p class="title" id="s3">Gobhi Manchur</p>
+                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat delectus temporibus vel blanditiis, dolores cumque? Nemo, id nihil sapiente odit nesciunt tempora ipsa quaerat eligendi explicabo eaque excepturi reprehenderit nisi.</p>
+                </section>
             </div>
-
-        </section>
+        </div>
     </body>
 </html>
